--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                   <img src="assets/images/icon-luxury.svg" alt="Luxury SVG">
                 </div>
                 <div>
-                  <h2 class="card-heading pb-4" s>Luxury</h2>
+                  <h2 class="card-heading pb-4">Luxury</h2>
                   <p class="card-description mb-4">
                     Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
                     rental and arrive in style.
