fonts self hosting

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta 
+    name="description" 
+    content="Frontend Mentor  3-column preview card component solution 
+    by Monash Perera, Monash Perera, Monash Tharuka Perera">
+  <meta name="author" content="Monash Tharuka Perera, Monash Perera">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
   <title>Frontend Mentor | 3-column preview card component</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
